--- a/bigstring-unix.opam
+++ b/bigstring-unix.opam
@@ -14,6 +14,7 @@ build: [ "jbuilder" "build" "-j" jobs "-p" name "@install" ]
 build-test: [ "jbuilder" "runtest" "-p" name "-j" jobs ]
 depends: [
   "jbuilder" {build & >= "1.0+beta19.1"}
+  "bigstring"
   "base-bigarray"
   "base-bytes"
   "base-unix"
