--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,12 @@ env:
   global:
   - PINS="bigstring:. bigstring-unix:."
   - DISTRO="ubuntu-16.04"
+  - DEPOPTS="base-unix"
   matrix:
   #- PACKAGE="bigstring" OCAML_VERSION="4.02.3" DEPOPTS="base-unix"
-  - PACKAGE="bigstring" OCAML_VERSION="4.03.0" DEPOPTS="base-unix"
-  - PACKAGE="bigstring" OCAML_VERSION="4.04.2" DEPOPTS="base-unix"
-  - PACKAGE="bigstring" OCAML_VERSION="4.05.0" DEPOPTS="base-unix"
-  - PACKAGE="bigstring" OCAML_VERSION="4.06.0" DEPOPTS="base-unix"
+  - PACKAGE="bigstring" OCAML_VERSION="4.03" 
+  - PACKAGE="bigstring" OCAML_VERSION="4.04"
+  - PACKAGE="bigstring" OCAML_VERSION="4.05"
+  - PACKAGE="bigstring" OCAML_VERSION="4.06"
+  - PACKAGE="bigstring" OCAML_VERSION="4.08"
+  - PACKAGE="bigstring" OCAML_VERSION="4.09"
