Make Bigstring_unix independent of Bigstring
also remove the unnecessary dependency on base-bytes

--- a/src/dune
+++ b/src/dune
@@ -20,4 +20,4 @@
  (modules Bigstring_compat Bigstring_unix)
  (flags :standard -warn-error -3) ; deprecation
  (synopsis "Bigstrings from Unix memory mapping.")
- (libraries bigstring unix))
+ (libraries bigarray unix))
