--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,9 @@ env:
   - PACKAGE="bigstring" OCAML_VERSION="4.06"
   - PACKAGE="bigstring" OCAML_VERSION="4.08"
   - PACKAGE="bigstring" OCAML_VERSION="4.09"
+  - PACKAGE="bigstring-unix" OCAML_VERSION="4.03" 
+  - PACKAGE="bigstring-unix" OCAML_VERSION="4.04"
+  - PACKAGE="bigstring-unix" OCAML_VERSION="4.05"
+  - PACKAGE="bigstring-unix" OCAML_VERSION="4.06"
+  - PACKAGE="bigstring-unix" OCAML_VERSION="4.08"
+  - PACKAGE="bigstring-unix" OCAML_VERSION="4.09"
