prepare appveyor test environment by using external opam_init.cmd

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,15 @@
 install:
   - cd "%APPVEYOR_BUILD_FOLDER%"
-  - appveyor_init.cmd
-environment:
-  OCAMLTOP_INCLUDE_PATH: 'C:\projects\ocaml-bigstring\.opam\ocaml-system\lib\toplevel'
-  OCAMLRUNPARAM: "bs=8M"
+  - appveyor DownloadFile "https://raw.githubusercontent.com/madroach/ocaml-appveyor/master/opam_init.cmd"
+  - opam_init.cmd
 build_script:
   - cd "%APPVEYOR_BUILD_FOLDER%"
-  - opam init --no-setup --yes --compiler=ocaml-system https://github.com/madroach/opam-repository.git
-  - opam pin --no-action --verbose stdlib-shims https://github.com/ocaml/stdlib-shims.git
-  - opam pin --no-action --verbose dune https://github.com/madroach/dune.git
-  - opam install --yes --verbose --jobs=1 alcotest
-  - opam exec -- dune runtest
+  - echo OPAMROOT %OPAMROOT%
+  - echo OPAM_SWITCH_PREFIX %OPAM_SWITCH_PREFIX%
+  - echo CAML_LD_LIBRARY_PATH %CAML_LD_LIBRARY_PATH%
+  - echo OCAMLTOP_INCLUDE_PATH %OCAMLTOP_INCLUDE_PATH%
+  - echo OCAMLPATH %OCAMLPATH%
+  - opam install --yes alcotest
+  - dune build @install
+test_script:
+  - dune runtest
